services/dL_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-layer-cluster-ip
  labels:
    app: data-layer
spec:
  selector:
    app: data-layer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
