services/dL_node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-layer-cluster-ip
  labels:
    app: data-layer
spec:
  type: NodePort  
  selector:
    app: data-layer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 30000
