services/eL_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-layer-cluster-ip
  labels:
    app: elastic-layer
spec:
  selector:
    app: elastic-layer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4500
