services/eL_node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-layer-node-port
  labels:
    app: elastic-layer
spec:
  type: NodePort  
  selector:
    app: elastic-layer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4500
      nodePort: 32500
