services/ingress-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: ingress-lb

spec:
  selector:
    name: cluster-ingress
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
