services/cluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cluster-ingress
  labels:
    app: cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: public
  rules:
  - host: vs.cluster.com
    http:
      paths:

      - path: /data-layer
        pathType: Prefix
        backend:
          service:
            name: data-layer-cluster-ip
            port:
              number: 80

      # uncomment when elastic layer is up
      # - path: /elastic-layer
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: elastic-layer-cluster-ip
      #       port:
      #         number: 80
